--- a/users/templates/500.html
+++ b/users/templates/500.html
@@ -161,8 +161,9 @@
             </svg>
     </div>
     <div class="text" style="margin-top : -100px">
-        <h1>403 Error</h1>  
-         <h3>You not allowed to login when you are not customer <a href="{% url 'index' %}">go BACK</a></h3> 
+        <h1>500 Error</h1>  
+      <h2>Couldn't launch :(</h2>
+         <h3>Please contact your admin to address error<a href="{% url 'index' %}">go BACK</a></h3> 
     </div>
 </body>
 <html>
