--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -63,6 +63,7 @@
 		    <div class="cls-content-sm panel">
 		        <div class="panel-body" style="background-color: white; border-radius: 10;">
 		            <div class="mar-ver pad-btm">
+						<p style="color:red;">{{error}}</p>
 		                <h3 class="h4 mar-no">Account Login</h3>
 		                <p class="text-muted">Sign In to your account</p>
 		            </div>
