--- a/users/templates/catridgesorder.html
+++ b/users/templates/catridgesorder.html
@@ -17,8 +17,8 @@
                                     
                                     <div class="col-sm-12 table-toolbar-right">
                                     <a href="{% url 'export_orders' %}"> <button class="btn btn-primary my-2 my-sm-0" type="submit"><i class="fa fa-download fa-lg" aria-hidden="true"></i>&nbsp; &nbsp;Export</button></a>
-                                    {% comment %} <a href="{% url 'pay_later_orders' %}"> <button class="btn btn-warning my-2 my-sm-0" type="submit">&nbsp; &nbsp;Pay Later Orders</button></a> {% endcomment %}
-
+                                    <a href="{% url 'pay_later_catridges' %}"> <button class="btn btn-warning my-2 my-sm-0" type="submit">&nbsp; &nbsp;Pay Later catridges</button></a>
+                                    <a href="{% url 'notdeliveredpagecatridges' %}"> <button class="btn btn-mint my-2 my-sm-0" type="submit">&nbsp; &nbsp;Not delivered catridges</button></a>
                                     </div>
                                 </div>
                                 
@@ -27,7 +27,6 @@
                                 <table class="table table-striped" style="border: 1px">
                                     <thead>
                                         <tr>
-                                            <th class="text-left">ID</th>
                                             <th>Customer</th>
                                             <th>Phone</th>
                                             <th>Address</th>
@@ -42,7 +41,6 @@
                                     <tbody>
                                      {% for order in page_obj %}
                                     <tr>
-                                            <td><a class="btn-link" href="#">{{order.id}}</a></td>
                                             <td>{{order.toolshippingaddress.names}} </td>
                                             <td>{{order.toolshippingaddress.phone}} </td>
                                             <td>{{order.toolshippingaddress.address}} - {{order.toolshippingaddress.city}}</td>
@@ -53,6 +51,16 @@
                                                 <a href="{% url 'catridgesorder_details' order.id%}">
                                                 <div class="btn btn-primary">Details</div>
                                                 </a>
+
+                                                {% if  order.delivery %}
+                                                <a onclick="return confirm('Are you sure you want to comfirm this?')" href="{% url 'not_deliveredcatridge' order.id %}">
+                                                    <button class="btn btn-success">Delivered</button>
+                                                </a>
+                                                {% else %}
+                                                <a onclick="return confirm('Are you sure you want to comfirm this?')" href="{% url 'deliveredordercatridge' order.id %}">
+                                                <button class="btn btn-warning">Not delivery</button>
+                                                </a>
+                                            {% endif %}
                                             </td>
                                             
                                         </tr>
