--- a/users/templates/notdeliveredcatridges.html
+++ b/users/templates/notdeliveredcatridges.html
@@ -1,13 +1,12 @@
 {% extends 'base.html'%}
 {% load static %}
-{% load humanize %}
 {% block content%}
 
  <div id="page-content">
                     
 					<div class="panel">
                         <div class="panel-heading">
-                            <h3 class="panel-title">Tools</h3>
+                            <h3 class="panel-title">Not Delivered order</h3>
                         </div>
                     
                         <!--Data Table-->
@@ -17,55 +16,53 @@
                                 <div class="row">
                                     
                                     <div class="col-sm-12 table-toolbar-right">
-                                        <a href="{% url 'add_tool' %}" id="demo-btn-addrow" class="btn btn-purple"><i class="demo-pli-add"></i> Add new</a>
 
-                                        <div class="btn-group">
-                                            <div class="form-group">
-                                        <form class="form-inline my-2 my-lg-0" action="{% url 'tools'%}">
-                                        <input id="demo-input-search2" type="text" name="search" placeholder="Search by Fisrtname" class="form-control" autocomplete="off">
-                                        <button class="btn btn-success my-2 my-sm-0" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
-                                        </form>
-                                        </div>
-                                   
-                                            
-                                        </div>
                                     </div>
                                 </div>
+                                
                             </div>
                             <div class="table-responsive">
                                 <table class="table table-striped" style="border: 1px">
                                     <thead>
                                         <tr>
-                                            <th>Title</th>
-                                            <th>Amount</th>
-                                            <th>Description</th>
-                                            <th>created at</th>
+                                            <th>Customer</th>
+                                            <th>Phone</th>
+                                            <th>Address</th>
+                                            <th>Date Ordered</th>
+                                            <th>Total</th>
                                             <th>Actions</th>
+                                            
                                             
                                             
                                         </tr>
                                     </thead>
                                     <tbody>
-                                    {% for tool in page_obj %}
+                                     {% for order in page_obj %}
                                     <tr>
-                                            <td>{{tool.Title}}</td>
-                                            <td>{{tool.Amount|intcomma}}</td>
-                                            <td>{{tool.Description}}</td>
-                                            <td>{{tool.created_at}}</td>
+                                            <td>{{order.shippingaddress.names}} </td>
+                                            <td>{{order.shippingaddress.phone}} </td>
+                                            <td>{{order.shippingaddress.address}} - {{order.shippingaddress.city}}</td>
+                                            <td>{{order.date_ordered}}</td>
+                                            <td>{{order.get_cart_total}} Rwf</td>
+                                            
                                             <td>
-                                                <a href="{% url 'update_tool' tool.id %}">
-                                                    <button class="btn btn-primary" title="Update"><i class='fa fa-pencil'></i></button>
+                                                <a href="{% url 'catridgesorder_details' order.id%}">
+                                                <div class="btn btn-success">Details</div>
                                                 </a>
-                                                 <a onclick="return confirm('Are you sure you want to delete this?')" href="{% url 'delete_tools' tool.id %}">
-                                                    <button class="btn btn-danger" title="Delete"><i class='fa fa-trash'></i></button>
-                                                </a> 
-                                            </td>
 
-                                           
+                                                {% if  order.delivery %}
+                                                <p>
+                                                </p>
+                                                {% else %}
+                                                <a onclick="return confirm('Are you sure you want to comfirm this?')" href="{% url 'deliveredordercatridge' order.id %}">
+                                                <button class="btn btn-warning">Delive this</button>
+                                                </a>
+                                            {% endif %}
+                                            </td>
                                             
                                         </tr>
 
-                                    {% endfor %}
+                                    {% endfor %}  
                                         
                                     
                                         </tbody>
