--- a/users/templates/add_customer.html
+++ b/users/templates/add_customer.html
@@ -77,7 +77,7 @@
                                             </div>
                                             <div class="col-sm-6">
                                                 <div class="form-group">
-                                                    <label class="control-label">Meter Number</label>
+                                                    <label class="control-label">Meter Number <b style="color:#38b3f5;"> (If customer is for inuma only) </b></label>
                                                     <select class="form-control" name="Meternumber">
                                                        <option value="">Select meter number</option> 
                                                     {% for meter in Meter %}
