--- a/users/templates/base.html
+++ b/users/templates/base.html
@@ -184,7 +184,7 @@
                 <!--Brand logo & name-->
                 <!--================================-->
                 <div class="navbar-header">
-                    <a href="index.html" class="navbar-brand">
+                    <a href="{% url 'index' %}" class="navbar-brand">
                         <img src="{% static "img/logo.png" %}" alt="Nifty Logo" class="brand-icon">
                         <div class="brand-title">
                             <span class="brand-text">Water Access</span>
