--- a/users/templates/addnewblog.html
+++ b/users/templates/addnewblog.html
@@ -15,16 +15,16 @@
                                 {% csrf_token %}
                                     <div class="panel-body">
                                         <div class="row">
-                                            <div class="col-sm-6">
+                                            <div class="col-sm-12">
                                                 <div class="form-group">
                                                     <label class="control-label">Title</label>
                                                     <input type="text" class="form-control" name="Title"> 
                                                 </div>
                                             </div>
-                                            <div class="col-sm-6">
+                                            <div class="col-sm-12">
                                                 <div class="form-group">
                                                     <label class="control-label">Details</label>
-                                                    <textarea name="details" class="form-control" ></textarea>
+                                                    <textarea name="details" class="form-control" style='height:120px' ></textarea>
                                                 </div>
                                             </div>
                                         </div>
