--- a/users/templates/dashboard.html
+++ b/users/templates/dashboard.html
@@ -11,16 +11,16 @@
 					<div class="panel-body">
                                 <h1 class="page-header text-overflow">Dashboard Filter</h1>
                         
-                    <div class="form-field">
+                    <div>
 						<div class="row">
-						<div class="col-sm-4">
+						<div class="col-sm-4 text-center">
 							<label><input type="radio" name="Radio" value="all" checked > all time.</label>
 						</div>
-						<div class="col-sm-4">
-							<label><input type="radio" name="Radio" value="daily" > Daily.</label>
+						<div class="col-sm-4 text-center">
+							<label><input type="radio" name="Radio" value="daily" > Today.</label>
 						</div>
-                        <div class="col-sm-4">
-							<label><input type="radio" name="Radio" value="weekly"> Weekly.</label>
+                        <div class="col-sm-4 text-center">
+							<label><input type="radio" name="Radio" value="weekly"> This week.</label>
 						</div>
 						</div>
 					</div>
