--- a/users/templates/dashboard.html
+++ b/users/templates/dashboard.html
@@ -38,7 +38,7 @@
 					                    <div class="panel panel-warning panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                                <i class="fas fa-users icon-3x"></i>
+					                                <i class="fa fa-users icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -54,7 +54,7 @@
 					                    <div class="panel panel-info panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                                <i class="far fa-credit-card icon-3x"></i>
+					                                <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -67,7 +67,7 @@
 					                    <div class="panel panel-mint panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                               <i class="fas fa-coins icon-3x"></i>
+					                               <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -85,7 +85,7 @@
 					                    <div class="panel panel-success panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                                <i class="far fa-credit-card icon-3x"></i>
+					                                <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -98,7 +98,7 @@
 					                    <div class="panel panel-danger panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                               <i class="fas fa-coins icon-3x"></i>
+					                               <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -111,7 +111,7 @@
 					                    <div class="panel panel-purple panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                                <i class="fas fa-users icon-3x"></i>
+					                                <i class="fa fa-tint icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -133,7 +133,7 @@
 					                    <div class="panel panel-warning panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                                <i class="fas fa-users icon-3x"></i>
+					                                <i class="fa fa-users icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -149,7 +149,7 @@
 					                    <div class="panel panel-info panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                                <i class="far fa-credit-card icon-3x"></i>
+					                                <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -162,7 +162,7 @@
 					                    <div class="panel panel-mint panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                               <i class="fas fa-coins icon-3x"></i>
+					                               <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -180,7 +180,7 @@
 					                    <div class="panel panel-success panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                                <i class="far fa-credit-card icon-3x"></i>
+					                                <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -190,10 +190,10 @@
 					                    </div>
 					                </div>
 					                <div class="col-md-6">
-					                    <div class="panel panel-mint panel-colorful media middle pad-all">
+					                    <div class="panel panel-danger panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                               <i class="fas fa-coins icon-3x"></i>
+					                               <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -206,7 +206,7 @@
 					                    <div class="panel panel-purple panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                                <i class="fas fa-users icon-3x"></i>
+					                                <i class="fa fa-tint icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -228,7 +228,7 @@
 					                    <div class="panel panel-warning panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                                <i class="fas fa-users icon-3x"></i>
+					                                <i class="fa fa-users icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -244,7 +244,7 @@
 					                    <div class="panel panel-info panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                                <i class="far fa-credit-card icon-3x"></i>
+					                                <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -257,7 +257,7 @@
 					                    <div class="panel panel-mint panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                               <i class="fas fa-coins icon-3x"></i>
+					                               <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -275,7 +275,7 @@
 					                    <div class="panel panel-success panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                                <i class="far fa-credit-card icon-3x"></i>
+					                                <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -285,10 +285,10 @@
 					                    </div>
 					                </div>
 					                <div class="col-md-6">
-					                    <div class="panel panel-mint panel-colorful media middle pad-all">
+					                    <div class="panel panel-danger panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                               <i class="fas fa-coins icon-3x"></i>
+					                               <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -302,7 +302,7 @@
 					                    <div class="panel panel-purple panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                                <i class="fas fa-users icon-3x"></i>
+					                                <i class="fa fa-tint icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
