--- a/users/templates/CustomerBoard.html
+++ b/users/templates/CustomerBoard.html
@@ -201,7 +201,7 @@
 					                    <div class="panel panel-warning panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                                <i class="fas fa-users icon-3x"></i>
+					                                <i class="fa fa-users icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -217,7 +217,7 @@
 					                    <div class="panel panel-info panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                                <i class="far fa-credit-card icon-3x"></i>
+					                                <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -230,7 +230,7 @@
 					                    <div class="panel panel-mint panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                               <i class="fas fa-coins icon-3x"></i>
+					                               <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -248,7 +248,7 @@
 					                    <div class="panel panel-info panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                                <i class="far fa-credit-card icon-3x"></i>
+					                                <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -261,7 +261,7 @@
 					                    <div class="panel panel-mint panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                               <i class="fas fa-coins icon-3x"></i>
+					                               <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -274,7 +274,7 @@
 					                    <div class="panel panel-primary panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                               <i class="fas fa-coins icon-3x"></i>
+					                               <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -287,7 +287,7 @@
 					                    <div class="panel panel-danger panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                               <i class="fas fa-coins icon-3x"></i>
+					                               <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -327,7 +327,7 @@
 					                    <div class="panel panel-warning panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                                <i class="fas fa-users icon-3x"></i>
+					                                <i class="fa fa-users icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -343,7 +343,7 @@
 					                    <div class="panel panel-info panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                                <i class="far fa-credit-card icon-3x"></i>
+					                                <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -356,7 +356,7 @@
 					                    <div class="panel panel-mint panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                               <i class="fas fa-coins icon-3x"></i>
+					                               <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -374,7 +374,7 @@
 					                    <div class="panel panel-info panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                                <i class="far fa-credit-card icon-3x"></i>
+					                                <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -387,7 +387,7 @@
 					                    <div class="panel panel-mint panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                               <i class="fas fa-coins icon-3x"></i>
+					                               <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -400,7 +400,7 @@
 					                    <div class="panel panel-primary panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                               <i class="fas fa-coins icon-3x"></i>
+					                               <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -413,7 +413,7 @@
 					                    <div class="panel panel-danger panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                               <i class="fas fa-coins icon-3x"></i>
+					                               <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -452,7 +452,7 @@
 					                    <div class="panel panel-warning panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                                <i class="fas fa-users icon-3x"></i>
+					                                <i class="fa fa-users icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -468,7 +468,7 @@
 					                    <div class="panel panel-info panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                                <i class="far fa-credit-card icon-3x"></i>
+					                                <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -481,7 +481,7 @@
 					                    <div class="panel panel-mint panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                               <i class="fas fa-coins icon-3x"></i>
+					                               <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -499,7 +499,7 @@
 					                    <div class="panel panel-info panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                                <i class="far fa-credit-card icon-3x"></i>
+					                                <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -512,7 +512,7 @@
 					                    <div class="panel panel-mint panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                               <i class="fas fa-coins icon-3x"></i>
+					                               <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -525,7 +525,7 @@
 					                    <div class="panel panel-primary panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                               <i class="fas fa-coins icon-3x"></i>
+					                               <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
@@ -538,7 +538,7 @@
 					                    <div class="panel panel-danger panel-colorful media middle pad-all">
 					                        <div class="media-left">
 					                            <div class="pad-hor">
-					                               <i class="fas fa-coins icon-3x"></i>
+					                               <i class="fa fa-money icon-3x"></i>
 					                            </div>
 					                        </div>
 					                        <div class="media-body">
