--- a/users/templates/update_customer.html
+++ b/users/templates/update_customer.html
@@ -2,6 +2,15 @@
 {% load static %}
 {% block content%}
 
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+<script
+  src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+  crossorigin="anonymous"></script>
+<!-- Latest compiled and minified JavaScript -->
+	<link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
+
  <div id="page-content">
                     
 					<div class="panel">
@@ -79,7 +88,7 @@
                                             <div class="col-sm-12">
                                                 <div class="form-group">
                                                     <label class="control-label">Meter Number</label>
-                                                    <select class="form-control" name="Meternumber">
+                                                    <select class="js-example-basic-single form-control" name="Meternumber">
                                                        <option value="">Select meter number</option> 
                                                     {% for meter in Meter %}
                                                        <option value="{{meter.id}}">{{meter.Meternumber}}</option> 
@@ -106,5 +115,12 @@
 					
 					
                 </div>
+
+                <script>
+                    $(document).ready(function() {
+                        $('.js-example-basic-single').select2();
+                    });
+                    
+                    </script
 
 {% endblock content%}
